app/src/test/resources/programs/invalid/foreign/bad_syntax.exe
foo foreign f() -> Int

foo f() -> Int = foreign

foo main() -> Int = {
    foreign let x: Int;
    ()
}